# travdata

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.adoc  README.md  README.rst  development.adoc  devenv.nix  extract_tables.py  governments.py  jsonenc.py  parseutil.py  parseutil_test.py  pyinstaller.spec  pyproject.toml  tradegoods.py  tradetable.py
rust/: .gitignore  Cargo.toml  NOTES.adoc  devenv.nix  maskfile.md
rust/generic-pipeline/: Cargo.toml
rust/generic-pipeline/src/: lib.rs  testutil.rs
rust/generic-pipeline/src/intermediates/: mod.rs
rust/generic-pipeline/src/node/: core_type.rs  mod.rs  parse_tests.rs  test_defaults.rs
rust/generic-pipeline/src/node/core_type/: mod.rs  test_defaults.rs  tests.rs
rust/generic-pipeline/src/pipeline/: mod.rs
rust/generic-pipeline/src/plargs/: mod.rs
rust/generic-pipeline/src/plinputs/: mod.rs
rust/generic-pipeline/src/plparams/: mod.rs
rust/generic-pipeline/src/processing/: mod.rs  tests.rs
rust/generic-pipeline/src/systems/: missingsystem.rs  mod.rs
rust/generic-pipeline/src/systems/metasystem/: mod.rs  tests.rs
rust/pipeline/: Cargo.toml
rust/pipeline/src/: enum_conversion.rs  lib.rs  testutil.rs
rust/pipeline/src/intermediates/: es_transform.rs  mod.rs
rust/pipeline/src/node/: core_type.rs  mod.rs
rust/pipeline/src/node/spec/: es_transform.rs  mod.rs  output_file_csv.rs  output_file_json.rs  pdf_extract_table.rs
rust/pipeline/src/node/tests/: mod.rs
rust/pipeline/src/pipeline/: mod.rs
rust/pipeline/src/plargs/: mod.rs
rust/pipeline/src/plparams/: mod.rs
rust/pipeline/src/processargs/: mod.rs
rust/pipeline/src/processing/: mod.rs  tests.rs
rust/pipeline/src/spec_types/: mod.rs  pdf.rs
rust/pipeline/src/spec_types/pdf/: mod.rs  tests.rs
rust/pipeline/src/specs/: es_transform.rs  input_pdf_file.rs  js_context.rs  js_transform.rs  mod.rs  output_directory.rs  output_file_csv.rs  output_file_json.rs  pdf_extract_table.rs  test_defaults.rs
rust/pipeline/src/specs/tests/: mod.rs
rust/pipeline/src/systems/: missingsystem.rs  mod.rs
rust/pipeline/src/systems/es_transform/: mod.rs  tests.rs
rust/pipeline/src/systems/input_pdf_file/: mod.rs
rust/pipeline/src/systems/js_context/: mod.rs
rust/pipeline/src/systems/js_transform/: mod.rs  tests.rs
rust/pipeline/src/systems/metasystem/: mod.rs  tests.rs
rust/pipeline/src/systems/output_directory/: mod.rs
rust/pipeline/src/systems/output_file_csv/: mod.rs  tests.rs
rust/pipeline/src/systems/output_file_json/: mod.rs  tests.rs
rust/pipeline/src/systems/tabula_pdf_extract_table/: mod.rs  tests.rs
rust/pipeline/src/tabula_wrapper/: mod.rs  singlethreaded.rs
rust/pipeline/test_data/: .gitignore  tables.odt
rust/specs/: core_rulebook_2022.jsonnet
rust/speculative/: grouptreelist.rs  tagseditor.rs  tmp.rs.todo
rust/src/: clock.rs  commontext.rs  distpaths.rs  filesio.rs  fmtutil.rs  main.rs  mpscutil.rs  table.rs  testutil.rs
rust/src/cli/: extractcsvtables.rs  gui.rs  mod.rs
rust/src/config/: book.rs  extract.rs  mod.rs  root.rs
rust/src/extraction/: bookextract.rs  bookextract2.rs  index.rs  mod.rs  parseutil.rs  tableextract.rs  tabulautil.rs
rust/src/extraction/pdf/: cachingreader.rs  mod.rs  pdfiumthread.rs  pdfiumworker.rs  tabulareader.rs  tabulatmpl.rs
rust/src/extraction/pdf/cachingreader/: mod.rs  tests.rs
rust/src/extraction/tableextract/: bookextract.rs  estransform.rs  groupers.rs  internal.rs  legacy_transform.rs  mod.rs  transform.rs
rust/src/filesio/: dir.rs  mem.rs  mod.rs  tests.rs  util.rs  zip.rs
rust/src/gui/: cfgselect.rs  extract.rs  inputpdf.rs  main.rs  mainmenu.rs  mainwin.rs  mod.rs  outputselect.rs  pageview.rs  util.rs
rust/src/gui/components/: editgroup.rs  errordialog.rs  grouptreelist.rs  mod.rs  tagseditor.rs  textentry.rs
rust/src/gui/components/tmplimport/: importargsdialog.rs  tmplversiondialog.rs
rust/src/gui/extractionlist/: mod.rs
rust/src/gui/extractionlist/datamodel/item/: mod.rs
rust/src/gui/gobjects/: group.rs
rust/src/gui/tmplmodel/: edit.rs  mod.rs  subscribers.rs  tests.rs
rust/src/gui/treelist/: mod.rs
rust/src/gui/workers/: cfgloader.rs  extractor.rs  mod.rs  pdfiumworker.rs  tmplloader.rs
rust/src/template/: loadarg.rs  mod.rs
rust/src/template/serialised/: mod.rs  v0_6.rs
rust/src/templatedoc/: arena.rs  docgroup.rs  doctable.rs  doctableportion.rs  edit.rs  event.rs  mod.rs  tests.rs
rust/src/util/: subscribers.rs
rust/src/v8wrapper/: mod.rs  test.rs
rust/testutils/: Cargo.toml
rust/testutils/src/: lib.rs
rust/travdata-bin/: Cargo.toml
rust/travdata-bin/src/cli/: pdfpage.rs
rust/travdata-bin/src/extraction/: index.rs
rust/travdata-bin/src/extraction/pdf/: mod.rs  tabulareader.rs  tabulatmpl.rs
rust/travdata-bin/src/extraction/tableextract/: internal.rs
rust/travdata-bin/src/gui/: mainmenu.rs  styles.css  util.rs
rust/travdata-bin/src/gui/components/: mod.rs  textentry.rs
rust/travdata-bin/src/gui/treelist/: mod.rs
rust/travdata-bin/src/gui/workers/: tmplloader.rs
rust/travdata-bin/src/template/: mod.rs  validate.rs
rust/travdata-bin/src/template/serialised/: v0_6.rs
rust/travdata-extraction/: Cargo.toml
rust/travdata-extraction/src/: lib.rs  testutil.rs
rust/travdata-extraction/src/intermediates/: mod.rs
rust/travdata-extraction/src/node/: core_type.rs  mod.rs
rust/travdata-extraction/src/node/spec/: input_pdf_file.rs  mod.rs  output_file_csv.rs  output_file_json.rs
rust/travdata-extraction/src/node/spec_type/: mod.rs  pdf.rs
rust/travdata-extraction/src/node/tests/: mod.rs
rust/travdata-extraction/src/processargs/: mod.rs
rust/travdata-extraction/src/processing/: mod.rs  tests.rs
rust/travdata-extraction/src/processparams/: mod.rs
rust/travdata-extraction/src/systems/: missingsystem.rs  mod.rs
rust/travdata-extraction/src/systems/metasystem/: mod.rs  tests.rs
rust/utils/: Cargo.toml
rust/utils/src/: lib.rs
rust/v8testing/: Cargo.toml
rust/v8testing/src/: main.rs
rust/v8wrapper/: Cargo.toml
rust/v8wrapper/src/: lib.rs  modules.rs  test.rs  testisolate.rs
(+703 files in other folders)
