[tool.poetry]
name = "travdata"
version = "0.1.0"
description = "Data utility code for Mongoose Traveller TTRPG."
authors = ["John Beisley <johnbeisleyuk@gmail.com>"]
keywords = ["traveller", "ttrpg"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/huin/travdata"
packages = [
    {include = "travdata", from = "src"},
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
testfixtures = "^8.0.0"

[tool.black]
line-length = 100

[tool.poetry.dependencies]
python = "^3.11"
tabula-py = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
