[tool.poetry]
name = "travdata"
version = "0.1.0"
description = "Data utility code for Mongoose Traveller TTRPG."
authors = ["John Beisley <johnbeisleyuk@gmail.com>"]
keywords = ["traveller", "ttrpg"]
license = "MIT"
readme = "README.adoc"
repository = "https://github.com/huin/travdata"
packages = [
    {include = "travdata", from = "src"},
]

[tool.poetry.urls]
"Issues" = "https://github.com/huin/travdata/issues"

[tool.poetry.scripts]
travdata_cli = "travdata.cli.cli:main"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.9.0"
pylint = "^3.1.0"
pytest = "^8.0.2"
testfixtures = "^8.0.0"
trove-classifiers = "^2024.3.3"

[tool.black]
line-length = 100

[tool.poetry.dependencies]
progress = "^1.6"
python = "^3.11"
tabula-py = {extras = ["jpype"], version = "^2.9.0"}
ruamel-yaml = "^0.18.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
