[tool.poetry]
name = "travdata"
version = "0.3.2"
description = "Data utility code for Mongoose Traveller TTRPG."
authors = ["John Beisley <johnbeisleyuk@gmail.com>"]
keywords = ["traveller", "ttrpg"]
license = "MIT"
readme = "README.rst"  # rebuilt from README.adoc
repository = "https://github.com/huin/travdata"
packages = [
    {include = "travdata", from = "src"},
]

[tool.poetry.urls]
"Issues" = "https://github.com/huin/travdata/issues"

[tool.poetry.scripts]
travdata_cli = "travdata.cli.cli:main"
travdata_gui = "travdata.gui.gui:main"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.9.0"
pylint = "^3.1.0"
pytest = "^8.0.2"
testfixtures = "^8.0.0"
trove-classifiers = "^2024.3.3"
types-pyinstaller = "^6.5.0.20240311"

[tool.poetry.group.dev.dependencies.pyinstaller]
version = "^6.5.0"
python = ">=3.11,<3.13"

[tool.black]
line-length = 100

[tool.poetry.dependencies]
jpype1 = "^1.5.0"
pip-licenses-lib = "^0.2.1"
progress = "^1.6"
python = "^3.11"
tabula-py = {extras = ["jpype"], version = "^2.9.0"}
ruamel-yaml = "^0.18.6"
pyside6-essentials = {version = "^6.6.3", python = ">=3.11,<3.13"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = '''(?x)(
    travdata/gui/.*  # QtCore.pyi syntax error.
)'''

[tool.pylint.main]
ignore-paths = ["oneoff"]
