[workspace]

[package]
name = "travdata-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
atomic-write-file = "0.2.2"
borsh = { version = "1.5.5", features = ["derive"] }
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
ctrlc = "3.4.5"
gtk = { version = "0.9.5", package = "gtk4" }
hex = "0.4.3"
image = "0.25.5"
log = "0.4.22"
lru = "0.12.5"
regex = "1.11.1"
relm4 = "0.9.1"
relm4-components = "0.9.1"
serde_derive = "1.0.217"
serde_json = "1.0.134"
serde_v8 = "0.236.0"
serde_yaml_ng = "0.10.0"
sha = "1.0.3"
simple_bar = "0.2.2"
tabula = "0.2.0"
tempfile = "3.14.0"
test-casing = "0.1.3"
v8 = "130.0.2"
walkdir = "2.5.0"
xdg = "2.5.2"
zip = "2.2.2"

[dependencies.lazy-regex]
version = "3.4.1"
features = ["std"]

[dependencies.pdfium-render]
version = "0.8.27"
# Check if we need to use feature thread_safe. For now we're serialising access
# into a single worker thread.
features = ["image", "static"]

[dependencies.simplelog]
version = "0.12.2"
default-features = false

[dependencies.serde]
version = "1.0.217"
features = ["std", "serde_derive"]

[dev-dependencies]
googletest = { version = "0.13.0", features = ["anyhow"] }
