[workspace]

[package]
name = "travdata-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
atomic-write-file = "0.2.3"
borsh = { version = "1.5.7", features = ["derive"] }
clap = { version = "4.5.38", features = ["derive"] }
csv = "1.3.1"
ctrlc = "3.4.7"
gtk = { version = "0.9.6", package = "gtk4" }
hex = "0.4.3"
image = "0.25.6"
log = "0.4.27"
lru = "0.13.0"
regex = "1.11.1"
relm4 = "0.9.1"
relm4-components = "0.9.1"
serde_derive = "1.0.219"
serde_json = "1.0.140"
serde_v8 = "0.251.0"
serde_yaml_ng = "0.10.0"
sha = "1.0.3"
simple_bar = "0.2.2"
tabula = "0.2.0"
tempfile = "3.20.0"
test-casing = "0.1.3"
v8 = "135.1.0"
walkdir = "2.5.0"
xdg = "2.5.2"
zip = "2.6.0"

[dependencies.lazy-regex]
version = "3.4.1"
features = ["std"]

[dependencies.pdfium-render]
# TODO: Check if we need to use feature thread_safe. For now we're serialising
# access into a single worker thread.
version = "0.8.31"
default-features = false
# Select the matching pdfium_xxxx feature for the build being linked against.
# Match the image_xxx feature against the `image` crate being used.
features = ["image_025", "pdfium_6721", "static"]

[dependencies.simplelog]
version = "0.12.2"
default-features = false

[dependencies.serde]
version = "1.0.219"
features = ["std", "serde_derive"]

[dev-dependencies]
googletest = { version = "0.14.0", features = ["anyhow"] }
