[workspace]
resolver = "3"
edition = "2024"
members = [
  "bin",
  "generic-pipeline",
  "pipeline",
  "testutils",
  "utils",
  "v8wrapper",
]
exclude = ["deps/tabula-rs"]

[workspace.dependencies]
anyhow = "1.0.98"
atomic-write-file = "0.3.0"
borsh = { version = "1.5.7", features = ["derive"] }
clap = { version = "4.5.38", features = ["derive"] }
csv = "1.3.1"
ctrlc = "3.4.7"
gtk = { version = "0.10.3", package = "gtk4" }
googletest = { version = "0.14.0", features = ["anyhow"] }
hex = "0.4.3"
image = "0.25.6"
hashbrown = { version = "0.16.1", features = ["serde"] }
lazy-regex = { version = "3.4.1", features = ["std"] }
lazy_static = "1.5.0"
log = "0.4.27"
lru = "0.16.3"
map-macro = { version = "0.3.0", features = ["hashbrown"] }
mockall = "0.14.0"
predicates = "3.1.3"
relm4 = "0.10.1"
relm4-components = "0.10.1"
serde = { version = "1.0.219", features = ["std", "serde_derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
serde_v8 = "0.291.0"
serde_yaml_ng = "0.10.0"
sha = "1.0.3"
simple_bar = "0.2.2"
simplelog = { version = "0.12.2", default-features = false }
strum = { version = "0.27.1", features = ["derive", "std", "strum_macros"] }
strum_macros = "0.27.1"
tabula = "0.2.0"
tempfile = "3.20.0"
test-casing = "0.1.3"
test-log = "0.2.18"
thiserror = "2.0.18"
v8 = "145.0.0"
walkdir = "2.5.0"
xdg = "3.0.0"
zip = "7.0.0"

[workspace.dependencies.generic-pipeline]
package = "travdata-generic-pipeline"
path = "generic-pipeline"

[workspace.dependencies.testutils]
package = "travdata-testutils"
path = "testutils"

[workspace.dependencies.utils]
package = "travdata-utils"
path = "utils"

[workspace.dependencies.v8wrapper]
package = "travdata-v8wrapper"
path = "v8wrapper"

[workspace.dependencies.pdfium-render]
# TODO: Check if we need to use feature thread_safe. For now we're serialising
# access into a single worker thread.
version = "0.8.31"
default-features = false
# Select the matching pdfium_xxxx feature for the build being linked against.
# Match the image_xxx feature against the `image` crate being used.
features = ["image_025", "pdfium_6721", "static"]
