[package]
name = "travdata-generic-pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
hashbrown.workspace = true
lazy-regex.workspace = true
log.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
strum.workspace = true
strum_macros.workspace = true

[dev-dependencies]
googletest.workspace = true
map-macro.workspace = true
mockall.workspace = true
predicates.workspace = true
test-casing.workspace = true
test-log.workspace = true
