[package]
name = "travdata-pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
generic-pipeline.workspace = true
hashbrown.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
strum.workspace = true
strum_macros.workspace = true

[dev-dependencies]
googletest.workspace = true
map-macro.workspace = true
test-casing.workspace = true
