[package]
name = "travdata-pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
csv.workspace = true
generic-pipeline.workspace = true
hashbrown.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
serde_v8.workspace = true
strum.workspace = true
strum_macros.workspace = true
tabula.workspace = true
tempfile.workspace = true
v8.workspace = true
v8wrapper.workspace = true
thiserror.workspace = true

[dev-dependencies]
generic-pipeline = { features = ["testing"], workspace = true }
googletest.workspace = true
lazy_static.workspace = true
map-macro.workspace = true
test-casing.workspace = true
testutils.workspace = true
v8wrapper.workspace = true
